[MODEUSHARV-154] Upgrade mod-erm-usage-counter dependency to version 6.0.0 (#208)
* Update mod-erm-usage-counter to 6.0.0-SNAPSHOT

* Switch CS50Impl to counter50-client

* Switch CS51Impl to counter51-client

* Extract constant

* Add commons-lang3 dependency to cs50 module

* Unify client exception type and message format